--- a/src/index.css
+++ b/src/index.css
@@ -5,11 +5,13 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
-.form {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
+* {
+  background-color: rgb(185, 170, 136);
 }
-
+.formSection {
+  display: grid;
+  grid-template-columns: 1fr;
+}
 .formSec {
   display: grid;
 }
@@ -26,7 +28,33 @@ form {
 .Section3 {
   display: grid;
 }
-.edit {
-  width: 100px;
+p {
+  font-size: 1.2rem;
+}
+label {
+  font-size: 1.4rem;
+}
+button {
+  width: 120px;
+  height: 30px;
+  cursor: pointer;
   justify-self: center;
+  background-color: wheat;
+}
+button:hover {
+  background-color: rgb(211, 116, 116);
+}
+input {
+  background-color: rgb(218, 218, 218);
+  font-size: 1.2rem;
+  height: 25px;
+}
+input:focus {
+  border-radius: 2px;
+  outline: none;
+  border: 3px solid black;
+}
+
+.displaynone {
+  display: none;
 }
